2005-11-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/at89c51snd1c.h: added file submitted by 
	  Weston T. Schmidt <schmidtw AT users.sourceforge.net>, patch #1368001

2005-11-27 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/cppinit.c, support/cpp2/cpplib.h, support/cpp2/mkdeps.c,
	  support/cpp2/mkdeps.h: added command line option
	  -obj-ext=<extension> to SDCPP to define object file externion, used
	  for generation of make dependencies (-M)
	* src/SDCCmain.c: pass -obj-ext=<extension> to SDCPP

2005-11-26 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added small-stack-auto libraries,
	  added missing device/lib/mcs51/crt*.asm, pic and pic16 sources,
	  added pic and pic16 libraries

2005-11-26 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/float.h: Corrected typo in prototype of __fsgt

2005-11-25 Borut Razem <borut.razem AT siol.net>

	* sdcc/device/lib/Makefile.in, sdcc/device/lib/incl.mk:
	  added creation of model-mcs51-stack-auto libraries

2005-11-24 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCsymt.c (copyLinkChain): fixed bug 770487, copy structdef
	and fields-list too
	* src/SDCCast.c (createIvalArray): removed obsolete comment

2005-11-24 Borut Razem <borut.razem AT siol.net>

	* sdcc/device/lib/Makefile.in: remove all unnecessary files, 2nd try...,
	  added missing device/lib/mcs51/crt*.asm sources

2005-11-23 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCast.c (createIvalCharPtr): fixed bug 1348271

2005-11-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fs2schar.c,
	* device/lib/_fs2sint.c,
	* device/lib/_fs2slong.c: optimized inline asm

2005-11-21 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/lib/_fs2slong.c, device/lib/_fs2sint.c, device/lib/_fs2char.c:
	  Better handling of floats between -1.0 and 0.0.

2005-11-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
